* gimp.spec.in: Added a depedency for libexif
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12132 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/gimp.spec.in
+++ b/gimp.spec.in
@@ -28,6 +28,7 @@ Conflicts:	gimp-print >= @GIMPPRINT_TOONEW_VERSION@
 Requires:	gtkhtml2 >= @GTKHTML2_REQUIRED_VERSION@
 Requires:	librsvg2 >= @RSVG_REQUIRED_VERSION@
 Requires:	lcms
+Requires:	libexif
 BuildRequires:	gtk2-devel >= @GTK_REQUIRED_VERSION@
 BuildRequires:  fontconfig-devel >= @FONTCONFIG_REQUIRED_VERSION@
 BuildRequires:  libart_lgpl-devel >= 2.0
