2004-01-22  Sven Neumann  <sven@gimp.org>
	* configure.in: libgimpmodule depends on gmodule-2.0 and gobject-2.0.
	Incorporate both into GMODULE_CFLAGS and GMODULE_LIBS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12137 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -332,7 +332,7 @@ AM_PATH_GLIB_2_0(glib_required_version, :,
   AC_MSG_ERROR(Test for GLIB failed. See the file 'INSTALL' for help.),
   gobject)
 
-PKG_CHECK_MODULES(GMODULE, gmodule-2.0)
+PKG_CHECK_MODULES(GMODULE, gmodule-2.0 gobject-2.0)
 AC_SUBST(GMODULE_CFLAGS)
 AC_SUBST(GMODULE_LIBS)
 
