2004-01-22  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/plugin-defs.pl
        * plug-ins/common/Makefile.am: renamed ps to postscript, so automake
        doesn't get confused.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12140 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -118,7 +118,7 @@ libexec_PROGRAMS = \
 	$(PNG) \
 	pnm \
 	polar \
-	ps \
+	postscript \
 	psd \
 	psd_save \
 	$(PSP) \
@@ -1365,10 +1365,10 @@ polar_LDADD = \
 	$(RT_LIBS)							\
 	$(INTLLIBS)
 
-ps_SOURCES = \
-	ps.c
+postscript_SOURCES = \
+	postscript.c
 
-ps_LDADD = \
+postscript_LDADD = \
 	$(libgimpui)							\
 	$(libgimpwidgets)						\
 	$(libgimp)							\
