Updated French translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12149 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/POTFILES.in
+++ b/po-plug-ins/POTFILES.in
@@ -101,7 +101,7 @@ plug-ins/common/plugindetails.c
 plug-ins/common/png.c
 plug-ins/common/pnm.c
 plug-ins/common/polar.c
-plug-ins/common/ps.c
+plug-ins/common/postscript.c
 plug-ins/common/psd.c
 plug-ins/common/psd_save.c
 plug-ins/common/psp.c
