2004-01-25  Sven Neumann  <sven@gimp.org>
	* gimp-tips.xml.in: applied patch from Shlomi Fish that fixes a
	wrong menu path (bug #132028).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12156 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/gimp-tips.xml.in
+++ b/tips/gimp-tips.xml.in
@@ -181,7 +181,7 @@
   </tip>
   <tip level="intermediate">
     <_thetip>
-    If you stroke a path (Edit-&gt;Stroke Selection), the paint tools can
+    If you stroke a path (Edit-&gt;Stroke Path), the paint tools can
     be used with their current settings.  You can use the Paintbrush in
     gradient mode or even the Eraser or the Smudge tool.
     </_thetip>
