--- a/data/misc/gimp.desktop.in.in
+++ b/data/misc/gimp.desktop.in.in
@@ -1,9 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=The GIMP (unstable)
+_Name=@GIMP_VISIBLE_NAME@
 _Comment=Create and edit images or photographs
-Exec=gimp-remote-1.3 %U
-TryExec=gimp-1.3
+Exec=gimp-remote-@GIMP_APP_VERSION@ %U
+TryExec=gimp-@GIMP_APP_VERSION@
 Icon=@gimpdatadir@/images/wilber-icon.png
 Terminal=false
 Type=Application
