--- a/gimp-zip.in
+++ b/gimp-zip.in
@@ -11,53 +11,53 @@ cd @prefix@
 
 rm $ZIP
 zip -r $ZIP -@ <<EOF
-etc/gimp/@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@
-bin/gimp-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.exe
-bin/libgimp-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
-bin/libgimpbase-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
-bin/libgimpcolor-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
-bin/libgimpmath-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
-bin/libgimpmodule-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
-bin/libgimpui-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
-bin/libgimpwidgets-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
-lib/gimp/@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@/environ
-lib/gimp/@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@/plug-ins
-share/gimp/@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@
-man/man1/gimp-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.1
-man/man5/gimprc-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.5
+etc/gimp/@GIMP_SYSCONF_VERSION@
+bin/gimp-@GIMP_APP_VERSION@.exe
+bin/libgimp-@GIMP_API_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
+bin/libgimpbase-@GIMP_API_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
+bin/libgimpcolor-@GIMP_API_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
+bin/libgimpmath-@GIMP_API_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
+bin/libgimpmodule-@GIMP_API@-@LT_CURRENT_MINUS_AGE@.dll
+bin/libgimpui-@GIMP_API_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
+bin/libgimpwidgets-@GIMP_API_VERSION@-@LT_CURRENT_MINUS_AGE@.dll
+lib/gimp/@GIMP_PLUGIN_VERSION@/environ
+lib/gimp/@GIMP_PLUGIN_VERSION@/plug-ins
+share/gimp/@GIMP_DATA_VERSION@
+man/man1/gimp-@GIMP_APP_VERSION@.1
+man/man5/gimprc-@GIMP_APP_VERSION@.5
 EOF
 
-zip $ZIP lib/gimp/@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@/modules/*.dll
+zip $ZIP lib/gimp/@GIMP_PLUGIN_VERSION@/modules/*.dll
 zip $ZIP lib/locale/*/LC_MESSAGES/gimp20*.mo
 
 rm $DEVZIP
 zip -r $DEVZIP -@ <<EOF
-bin/gimptool-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.exe
-lib/libgimp-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.dll.a
-lib/gimp-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.lib
+bin/gimptool-@GIMP_TOOL_VERSION@.exe
+lib/libgimp-@GIMP_API_VERSION@.dll.a
+lib/gimp-@GIMP_API_VERSION@.lib
 lib/gimp.def
-lib/libgimpbase-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.dll.a
-lib/gimpbase-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.lib
+lib/libgimpbase-@GIMP_API_VERSION@.dll.a
+lib/gimpbase-@GIMP_API_VERSION@.lib
 lib/gimpbase.def
-lib/libgimpcolor-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.dll.a
-lib/gimpcolor-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.lib
+lib/libgimpcolor-@GIMP_API_VERSION@.dll.a
+lib/gimpcolor-@GIMP_API_VERSION@.lib
 lib/gimpcolor.def
-lib/libgimpmath-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.dll.a
-lib/gimpmath-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.lib
+lib/libgimpmath-@GIMP_API_VERSION@.dll.a
+lib/gimpmath-@GIMP_API_VERSION@.lib
 lib/gimpmath.def
-lib/libgimpmodule-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.dll.a
-lib/gimpmodule-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.lib
+lib/libgimpmodule-@GIMP_API_VERSION@.dll.a
+lib/gimpmodule-@GIMP_API_VERSION@.lib
 lib/gimpmodule.def
-lib/libgimpui-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.dll.a
-lib/gimpui-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.lib
+lib/libgimpui-@GIMP_API_VERSION@.dll.a
+lib/gimpui-@GIMP_API_VERSION@.lib
 lib/gimpui.def
-lib/libgimpwidgets-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.dll.a
-lib/gimpwidgets-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.lib
+lib/libgimpwidgets-@GIMP_API_VERSION@.dll.a
+lib/gimpwidgets-@GIMP_API_VERSION@.lib
 lib/gimpwidgets.def
-include/gimp-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@
-man/man1/gimptool-@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@.1
+include/gimp-@GIMP_API_VERSION@
+man/man1/gimptool-@GIMP_TOOL_VERSION@.1
 EOF
 
-zip -d $ZIP lib/gimp/@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@/plug-ins/gif.exe
+zip -d $ZIP lib/gimp/@GIMP_PLUGIN_VERSION@/plug-ins/gif.exe
 rm $GIFZIP
-zip $GIFZIP lib/gimp/@GIMP_MAJOR_VERSION@.@GIMP_MINOR_VERSION@/plug-ins/gif.exe
+zip $GIFZIP lib/gimp/@GIMP_PLUGIN_VERSION@/plug-ins/gif.exe
