2004-01-31  Manish Singh  <yosh@gimp.org>
        * configure.in: define ARCH_X86_64 globally.

        * app/base/cpu-accel.c: remove local definition.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12231 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -156,9 +156,14 @@ esac
 AC_MSG_RESULT([$target_or_host])
 
 case "$target_or_host" in
-  i*86-*-* | x86_64-*-*)
+  i*86-*-*)
     have_x86=yes
     AC_DEFINE(ARCH_X86, 1, [Define to 1 if you are compiling for ix86.])
+    ;;
+  x86_64-*-*)
+    have_x86=yes
+    AC_DEFINE(ARCH_X86, 1, [Define to 1 if you are compiling for ix86.])
+    AC_DEFINE(ARCH_X86_64, 1, [Define to 1 if you are compiling for amd64.])
     ;;
   ppc-*-linux* | powerpc-*)
     have_ppc=yes
