2004-01-31  Manish Singh  <yosh@gimp.org>
        * app/base/cpu-accel.c: Make the assembly PIC safe. Fixes #132999.

        * app/composite/Makefile.am
        * app/composite/gimp-composite-3dnow.c
        * app/composite/gimp-composite-mmx.c
        * app/composite/gimp-composite-sse.c
        * app/composite/gimp-composite-sse2.c: Disable code when compiling
        for PIC on ia32, since it'll barf things. These can be fixed later.

        * app/composite/gimp-composite-3dnow-test.c
        * app/composite/gimp-composite-mmx-installer.c
        * app/composite/gimp-composite-mmx-test.c
        * app/composite/gimp-composite-sse-installer.c
        * app/composite/gimp-composite-sse-test.c
        * app/composite/gimp-composite-sse2-installer.c
        * app/composite/gimp-composite-sse2-test.c: Regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12232 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/composite/Makefile.am
+++ b/app/composite/Makefile.am
@@ -55,12 +55,12 @@ libappcomposite_a_SOURCES = \
 
 regenerate: gimp-composite-generic.o gimp-composite-mmx.o gimp-composite-sse.o gimp-composite-sse2.o gimp-composite-3dnow.o gimp-composite-altivec.o gimp-composite-vis.o
 	$(srcdir)/make-installer.py                                                                        -f gimp-composite-generic.o
-	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_MMX)     && defined(ARCH_X86)'   -f gimp-composite-mmx.o
-	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_SSE)     && defined(ARCH_X86)'   -f gimp-composite-sse.o
-	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_SSE)     && defined(ARCH_X86)'   -f gimp-composite-sse2.o
-	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_3DNOW)   && defined(ARCH_X86)'   -f gimp-composite-3dnow.o
-	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_ALTIVEC) && defined(ARCH_PPC)'   -f gimp-composite-altivec.o
-	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_VIS)     && defined(ARCH_SPARC)' -f gimp-composite-vis.o
+	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_MMX) && defined(ARCH_X86) && (defined(ARCH_X86_64) || !defined(PIC))' -f gimp-composite-mmx.o
+	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_SSE) && defined(ARCH_X86) && (defined(ARCH_X86_64) || !defined(PIC))' -f gimp-composite-sse.o
+	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_SSE) && defined(ARCH_X86) && (defined(ARCH_X86_64) || !defined(PIC))' -f gimp-composite-sse2.o
+	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_3DNOW) && defined(ARCH_X86) && (defined(ARCH_X86_64) || !defined(PIC))' -f gimp-composite-3dnow.o
+	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_ALTIVEC) && defined(ARCH_PPC)' -f gimp-composite-altivec.o
+	$(srcdir)/make-installer.py -t -r '(__GNUC__ >= 3) && defined(USE_VIS) && defined(ARCH_SPARC)' -f gimp-composite-vis.o
 
 
 EXTRA_DIST = \
