2004-02-02  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumbnail.c (gimp_thumbnail_save_thumb): use
	the UTF-encoded URI in error messages, not the filename.

	* app/Makefile.am: use $(EXEEXT) for dist-hook binary dependency.

	* tools/gimp-remote.c: include <unistd.h> conditionally.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12253 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -167,6 +167,6 @@ endif
 # hooks to assure that the system gimprc and the gimprc manpage are
 # uptodate when a release is made
 
-dist-hook: gimp-@GIMP_APP_VERSION@
+dist-hook: gimp-$(GIMP_APP_VERSION)$(EXEEXT)
 	./$< --dump-gimprc-system > $(top_srcdir)/etc/gimprc
 	./$< --dump-gimprc-manpage > $(top_srcdir)/docs/gimprc-$(GIMP_APP_VERSION).5.in
