2004-02-03  Manish Singh  <yosh@gimp.org>
        * gimptool-2.0.in: use GIMP_API_VERSION.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12263 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/gimptool-2.0.in
+++ b/gimptool-2.0.in
@@ -185,7 +185,7 @@ while test $# -gt 0; do
         --cflags-noui)
           my_gtk_cflags=$glib_cflags ;;
       esac
-      includes=-I@includedir@/gimp-@LT_RELEASE@
+      includes=-I@includedir@/gimp-@GIMP_API_VERSION@
       echo $includes $my_gtk_cflags
       ;;
     --libs | --libs-nogimpui)
@@ -202,13 +202,13 @@ while test $# -gt 0; do
       done
       case $1 in
         --libs)
-          echo $libdirs -lgimpui-@LT_RELEASE@ -lgimpwidgets-@LT_RELEASE@ -lgimp-@LT_RELEASE@ -lgimpcolor-@LT_RELEASE@ -lgimpmath-@LT_RELEASE@ -lgimpbase-@LT_RELEASE@ $my_gtk_libs $rt_libs ;;
+          echo $libdirs -lgimpui-@GIMP_API_VERSION@ -lgimpwidgets-@GIMP_API_VERSION@ -lgimp-@GIMP_API_VERSION@ -lgimpcolor-@GIMP_API_VERSION@ -lgimpmath-@GIMP_API_VERSION@ -lgimpbase-@GIMP_API_VERSION@ $my_gtk_libs $rt_libs ;;
         --libs-nogimpui)
-          echo $libdirs -lgimp-@LT_RELEASE@ -lgimpcolor-@LT_RELEASE@ -lgimpmath-@LT_RELEASE@ -lgimpbase-@LT_RELEASE@ $my_gtk_libs $rt_libs ;;
+          echo $libdirs -lgimp-@GIMP_API_VERSION@ -lgimpcolor-@GIMP_API_VERSION@ -lgimpmath-@GIMP_API_VERSION@ -lgimpbase-@GIMP_API_VERSION@ $my_gtk_libs $rt_libs ;;
       esac
       ;;
     --libs-noui)
-      echo -L@libdir@ -lgimp-@LT_RELEASE@ -lgimpcolor-@LT_RELEASE@ -lgimpmath-@LT_RELEASE@ -lgimpbase-@LT_RELEASE@ $glib_libs $rt_libs
+      echo -L@libdir@ -lgimp-@GIMP_API_VERSION@ -lgimpcolor-@GIMP_API_VERSION@ -lgimpmath-@GIMP_API_VERSION@ -lgimpbase-@GIMP_API_VERSION@ $glib_libs $rt_libs
       ;;
     --install-bin | --install-admin-bin \
     | --install-bin-strip | --install-admin-bin-strip \
