2004-02-03  Manish Singh  <yosh@gimp.org>
        * configure.in: Allow generated files with versions.

        * gimp-2.0.pc.in
        * gimpthumb-2.0.pc.in
        * gimpui-2.0.pc.in
        * docs/gimp-1.3.1.in
        * docs/gimp-remote-1.3.1.in
        * docs/gimprc-1.3.5.in
        * docs/gimptool-2.0.1.in: renamed to unversioned files.

        I left gimptool-2.0.in alone since I didn't want to screw with
        other branches history. It'll be obsolete post-2.0 anyway.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12265 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -1526,10 +1526,6 @@ devel-docs/libgimpthumb/version
 devel-docs/libgimpwidgets/Makefile
 devel-docs/libgimpwidgets/version
 docs/Makefile
-docs/gimp-1.3.1
-docs/gimprc-1.3.5
-docs/gimptool-2.0.1
-docs/gimp-remote-1.3.1
 tips/Makefile
 cursors/Makefile
 themes/Makefile
@@ -1554,14 +1550,22 @@ po/Makefile.in
 po-libgimp/Makefile.in
 po-plug-ins/Makefile.in
 po-script-fu/Makefile.in
-gimptool-2.0
-gimp-2.0.pc
-gimpthumb-2.0.pc
-gimpui-2.0.pc
 gimp.spec
 gimp-zip
 Makefile
 ])
+
+dnl Files with versions in their names
+AC_CONFIG_FILES(
+docs/gimp-gimp_app_version.1:docs/gimp.1.in
+docs/gimprc-gimp_app_version.5:docs/gimprc.5.in
+docs/gimptool-gimp_tool_version.1:docs/gimptool.1.in
+docs/gimp-remote-gimp_app_version.1:docs/gimp-remote.1.in
+gimptool-gimp_tool_version:gimptool-2.0.in
+gimp-gimp_pkgconfig_version.pc:gimp.pc.in
+gimpthumb-gimp_pkgconfig_version.pc:gimpthumb.pc.in
+gimpui-gimp_pkgconfig_version.pc:gimpui.pc.in
+)
 
 AC_CONFIG_COMMANDS([chmod-scripts],
 [chmod +x gimptool-gimp_tool_version])
