2004-02-04  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am (dist-hook): create an unversioned gimprc manpage.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12275 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -169,4 +169,4 @@ endif
 
 dist-hook: gimp-$(GIMP_APP_VERSION)$(EXEEXT)
 	./$< --dump-gimprc-system > $(top_srcdir)/etc/gimprc
-	./$< --dump-gimprc-manpage > $(top_srcdir)/docs/gimprc-$(GIMP_APP_VERSION).5.in
+	./$< --dump-gimprc-manpage > $(top_srcdir)/docs/gimprc.5.in
