2004-02-05  RaphaÃ«l Quinet  <quinet@gamers.org>
	* configure.in: Added a conditional definition of the preprocessor
	symbol GIMP_UNSTABLE if the autoconf symbol GIMP_UNSTABLE is
	defined.

	* app/errors.c (gimp_errors_init): Replaced the #if test on
	GIMP_MINOR_VERSION modulo 2 by #ifdef GIMP_UNSTABLE.

	* app/composite/gimp-composite.c (gimp_composite_init): Print the
	init messages only in unstable versions.  Split the messages in
	two lines and mention "supported by gimp_composite" in order to
	give a hint that the availability of some features depends also on
	what code has been written.  Fixes bug #128825.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12279 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -99,6 +99,12 @@ AC_SUBST(GIMP_USER_VERSION)
 AC_SUBST(GIMP_UNSTABLE)
 AC_SUBST(GIMP_FULL_NAME)
 
+dnl The symbol GIMP_UNSTABLE is defined above for substitution in
+dnl Makefiles and conditionally defined here as a preprocessor symbol.
+if test "x$GIMP_UNSTABLE" = "xyes"; then
+  AC_DEFINE(GIMP_UNSTABLE,1,
+            [Define to 1 if this is an unstable version of the GIMP])
+fi
 
 # libtool versioning
 #LT_RELEASE=$GIMP_MAJOR_VERSION.$GIMP_MINOR_VERSION
