--- a/configure.in
+++ b/configure.in
@@ -116,11 +116,41 @@ fi
 m4_define([lt_current], [m4_eval(gimp_micro_version - gimp_interface_age)])
 m4_define([lt_revision], [gimp_interface_age])
 m4_define([lt_age], [m4_eval(gimp_binary_age - gimp_interface_age)])
+LT_CURRENT=lt_current
+LT_REVISION=lt_revision
+LT_AGE=lt_age
 LT_VERSION_INFO="lt_current:lt_revision:lt_age"
 LT_CURRENT_MINUS_AGE=m4_eval(lt_current - lt_age)
+AC_SUBST(LT_CURRENT)
+AC_SUBST(LT_REVISION)
+AC_SUBST(LT_AGE)
 AC_SUBST(LT_VERSION_INFO)
 AC_SUBST(LT_CURRENT_MINUS_AGE)
 
+GLIB_REQUIRED_VERSION=glib_required_version
+GTK_REQUIRED_VERSION=gtk_required_version
+GDK_PIXBUF_REQUIRED_VERSION=gdk_pixbuf_required_version
+PANGOFT2_REQUIRED_VERSION=pangoft2_required_version
+FONTCONFIG_REQUIRED_VERSION=fontconfig_required_version
+GTKDOC_REQUIRED_VERSION=gtkdoc_required_version
+GTKHTML2_REQUIRED_VERSION=gtkhtml2_required_version
+GIMPPRINT_REQUIRED_VERSION=gimpprint_required_version
+GIMPPRINT_TOONEW_VERSION=gimpprint_toonew_version
+RSVG_REQUIRED_VERSION=rsvg_required_version
+WMF_REQUIRED_VERSION=wmf_required_version
+AC_SUBST(GLIB_REQUIRED_VERSION)
+AC_SUBST(GTK_REQUIRED_VERSION)
+AC_SUBST(GDK_PIXBUF_REQUIRED_VERSION)
+AC_SUBST(PANGOFT2_REQUIRED_VERSION)
+AC_SUBST(FONTCONFIG_REQUIRED_VERSION)
+AC_SUBST(GTKDOC_REQUIRED_VERSION)
+AC_SUBST(GTKHTML2_REQUIRED_VERSION)
+AC_SUBST(GIMPPRINT_REQUIRED_VERSION)
+AC_SUBST(GIMPPRINT_TOONEW_VERSION)
+AC_SUBST(RSVG_REQUIRED_VERSION)
+AC_SUBST(WMF_REQUIRED_VERSION)
+
+GETTEXT_PACKAGE=gimp20
 
 GETTEXT_PACKAGE=gimp20
 AC_SUBST(GETTEXT_PACKAGE)
