2004-02-07  Michael Natterer  <mitch@gimp.org>
	* app/display/gimpdisplayshell.[ch]: removed all drawing functions.
	The file was still too large.

	* app/display/Makefile.am
	* app/display/gimpdisplayshell-draw.[ch]: new files containing
	the drawing functions.

	* app/display/gimpdisplayshell-callbacks.c
	* app/display/gimpdisplayshell-handlers.c
	* app/tools/gimpmovetool.c: changed #includes accordingly.

	* app/display/gimpdisplay-handlers.c
	(gimp_display_size_changed_handler): added some #if 0'ed code I'm
	not sure about. Actually, some of the handlers in this file could
	need the same code, so it could be abstracted as
	gimp_display_stop_draw() or something. Please have a look.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12297 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/display/Makefile.am
+++ b/app/display/Makefile.am
@@ -38,6 +38,8 @@ libappdisplay_a_sources = \
 	gimpdisplayshell-cursor.h		\
 	gimpdisplayshell-dnd.c			\
 	gimpdisplayshell-dnd.h			\
+	gimpdisplayshell-draw.c			\
+	gimpdisplayshell-draw.h			\
 	gimpdisplayshell-handlers.c		\
 	gimpdisplayshell-handlers.h		\
 	gimpdisplayshell-filter.c		\
