--- a/makefile.msc
+++ b/makefile.msc
@@ -1,8 +1,10 @@
 TOP = ..
 PRJ_TOP = .
 PACKAGE = gimp
-PKG_VER = 1.3
 !INCLUDE $(TOP)\glib\build\win32\make.msc
+
+!INCLUDE $(PRJ_TOP)\gimpdefs.msc
+PKG_VER = $(GIMP_VER)
 
 # in required build order
 # ./themes gets extra handling below
