2004-02-07  Manish Singh  <yosh@gimp.org>
        * configure.in: fix use of EXEEXT in tiff checks. Fixes bug #133763.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12304 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -846,11 +846,11 @@ AC_ARG_WITH(libtiff,  [  --without-libtiff       build without TIFF support])
 	[AC_MSG_WARN(*** TIFF plug-in will not be built (TIFF header files not found) ***)])],
       [AC_CHECK_LIB(tiff, TIFFWriteScanline,
 	[AC_CHECK_HEADER(tiffio.h,
-          TIFF='tiff(EXEEXT)'; LIBTIFF='-ltiff -ljpeg -lz',
+          TIFF='tiff$(EXEEXT)'; LIBTIFF='-ltiff -ljpeg -lz',
 	  [AC_MSG_WARN(*** TIFF plug-in will not be built (TIFF header files not found) ***)])],
 	[AC_CHECK_LIB(tiff34, TIFFFlushData,
 	  [AC_CHECK_HEADER(tiffio.h,
-            TIFF='tiff(EXEEXT)'; LIBTIFF='-ltiff34 -ljpeg -lz',
+            TIFF='tiff$(EXEEXT)'; LIBTIFF='-ltiff34 -ljpeg -lz',
 	    [AC_MSG_WARN(*** TIFF plug-in will not be built (TIFF header files not found) ***)])],
         [AC_MSG_WARN(*** TIFF plug-in will not be built (TIFF library not found) ***)], -ljpeg -lz -lm)], -ljpeg -lz -lm)], -lm)
   fi
